# bazel-deps-broke

./: Cargo.toml  WORKSPACE.bazel
test_crate/: BUILD.bazel  Cargo.toml
test_crate/features/: BUILD.bazel  readme.feature
test_crate/src/: main.rs
